--- a/pythonanywhere/templates/setup.html
+++ b/pythonanywhere/templates/setup.html
@@ -145,7 +145,7 @@
     
     // Define the ships (by length) that need to be placed.
     // For example: one ship of length 2, two ships of length 3, one ship of length 4.
-    const shipSizes = [2, 3, 3, 4];
+    const shipSizes = [2, 3, 3, 4, 5];
     // availableShips holds ship objects that have not yet been placed.
     let availableShips = []; // Each: {id, length}
     // placedShips will hold placed ships: {id, length, orientation, positions}
