Add theme color and viewport meta tags to HTML templates

--- a/pythonanywhere/templates/setup.html
+++ b/pythonanywhere/templates/setup.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="theme-color" content="#ADD8E6">
   <title>Battleship Setup</title>
   <!-- Include a Google Font for a modern look -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
