--- a/pythonanywhere/templates/battle.html
+++ b/pythonanywhere/templates/battle.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="theme-color" content="#ADD8E6">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Zeeslag - Game</title>
   <!-- Preload the logo image for smoother animations -->
