--- a/pythonanywhere/templates/bot_info.html
+++ b/pythonanywhere/templates/bot_info.html
@@ -2,6 +2,8 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zeeslag - Bot uitleg</title>
   <style>
     body {
