--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Future Notes: A modern app for organizing your thoughts, plans, and ideas. Access notes anywhere and stay productive.">
     <meta name="keywords" content="Notes App, Future Notes, Productivity App, Organize Thoughts, Notes on Windows">
-    <meta name="author" content="Nathan Cappellen">
+    <meta name="author" content="Bosbes">
     <meta name="google-site-verification" content="cbcPf7OinAwmP9GdiajNqU6PO60TCp2A44VOHu3N3T8" />
     <title>Future Notes - Homepage</title>
     <link rel="canonical” href="https://bosbes.eu.pythonanywhere.com/">
