--- a/pythonanywhere/templates/setup.html
+++ b/pythonanywhere/templates/setup.html
@@ -13,7 +13,7 @@
       font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
-      background: url('static/ocean.jpg') no-repeat center center fixed;
+      background: url('static/ocean2.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
     }
