--- a/pythonanywhere/templates/spectate.html
+++ b/pythonanywhere/templates/spectate.html
@@ -10,7 +10,7 @@
       font-family: Arial, sans-serif;
       text-align: center;
       margin: 20px;
-      background: url('static/ocean.jpg') no-repeat center center fixed;
+      background: url('static/ocean2.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #000;
     }
